:tada: initial commit

--- a/app.json
+++ b/app.json
@@ -25,10 +25,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.nylopersan.newDkApp"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "8688b1af-21ed-4b38-ac1c-48af062b5295"
+      }
     }
   }
 }
